Updated sequence of head and body tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
-  <body>
-<head>    
+
+   <head>    
+  
 <title> Hello there, awesome person! </title>
-    </head>
-    </body>
-      </html>
+  
+   </head>
+  
+   <body> This is the body content
+     
+  </body>
+     
+</html>
