--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 
    <head>    
   
-<title> Hello there, awesome person! </title>
+<title> My page here </title>
   
    </head>
   
    <body> This is the body content
      
-  </body>
+      <h1> header 1 </h1>
+  
+   </body>
      
 </html>
